--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -449,11 +449,11 @@ Here are just some of the public success stories from companies using Clojure.  
                 <li>
                   <p><img style="border: 3px solid #ebebeb;" src="/images/logos/pisano.png" /></p>
                   <p>
-                    <a target="pisano" href="https://www.pisano.co">Pisano’s</a> empowering & innovative customer experience platform uses Clojure, ClojureScript and Datomic.
+                    <a target="pisano" href="https://www.pisano.co">Pisano</a>'s empowering & innovative customer experience platform uses Clojure, ClojureScript and Datomic.
                   </p>
                   <hr>
                   <p>
-                    <span class='read-more'>Read why Pisano is so happy with using the Clojure platform.</span>
+                    <span class='read-more'><a target="testimonial" href="https://medium.com/pisanoeng/why-is-pisano-happy-with-clojure-c50e27fd18fb">Read</a> why Pisano is so happy with using the Clojure platform.</span>
                   </p>
                   <blockquote style='margin-left: 0; padding: 0'>
                     <p>Modelling our system state with data structure was a gratifying experience which seems organic, as it should be.</p>
