--- a/content/events/2019/reclojure.adoc
+++ b/content/events/2019/reclojure.adoc
@@ -8,6 +8,6 @@ London Clojurians
 :jbake-start: 2019-12-02
 :jbake-end: 2019-12-02
 
-We have the pleasure to invite you to https://reclojure.org[re:Clojure] - a brand new free and community driven conference, taking place in London on Dec 2nd, 2019 in an incredible venue. The final program is still being ironed out, but many of the original ClojureX speakers will be there. Special thanks to the Clojure community and the sponsors for managing to pull this one off on such a short notice. Can’t wait to see you there!
+We have the pleasure to invite you to https://reclojure.org[re:Clojure] - a brand new and free community driven conference, taking place in London on Dec 2nd, 2019 in an incredible venue. Many of the original ClojureX speakers will be there. Special thanks to the Clojure community and the sponsors for managing to put this together at such a short notice. We look forward to seeing you there!
 
-Please grab your seat at https://reclojure.org and join #reclojure on Clojurians for more info.
+Please reserve your seat at https://reclojure.org and join #reclojure on Clojurians for more info.
