--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -319,19 +319,19 @@ All Clojure vars are globally available so again there is not much in the way of
 == Deps and CLI
 
 [[clj_alpha]]
-**<<faq#clj_alpha,Are these scripts and tools.deps.alpha done?>>**
+**<<faq#clj_alpha,Are clj and tools.deps.alpha done?>>**
 
 No. There are lots of known gaps and ideas still to implement. But it is useful now. :)
 
 [[clj_replace]]
 **<<faq#clj_replace,Is clj a replacement for lein and boot?>>**
 
-No. The clojure scripts are focused on a) building classpaths and b) launching clojure programs. They do not (and will not) create artifacts, deploy artifacts, etc.
+No. The clojure tools are focused on a) building classpaths and b) launching clojure programs. They do not (and will not) create artifacts, deploy artifacts, etc.
 
 tools.deps.alpha aims to provide programmatic building blocks for dependency resolution and classpath construction. clj/clojure wraps these into a command-line form that can be used to run Clojure programs. You can compose these pieces to do many other things.
 
 [[clj_dynamic]]
-**<<faq#clj_dynamic,Do these scripts allow you to dynamically add dependencies to a running repl?>>**
+**<<faq#clj_dynamic,Do these tools allow you to dynamically add dependencies to a running repl?>>**
 
 No. Other tools exist to do this now or could be added on top of the existing functionality but this was not part of the initial goal.
 
