explain language name choice

--- a/content/about/rationale.adoc
+++ b/content/about/rationale.adoc
@@ -19,6 +19,10 @@ Clojure has a distinctive approach to <<state#,state and identity>>.
 
 == Why Clojure?
 
+Clojure is pronounced exactly like closure, it's actually a pun.
+
+I wanted an unique name involving c (c#), l (lisp) and j (java).
+
 Why did I write yet another programming language? Basically because I wanted:
 
 * A Lisp
