--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -35,6 +35,7 @@ Community:
 * <<books#,Books>>
 * http://www.braveclojure.com/[Clojure for the Brave and True] - a beginner book by Daniel Higginbotham
 * http://aphyr.com/posts/301-clojure-from-the-ground-up-welcome[Clojure from the ground up] - a series of intro articles by Kyle Kingsbury
+* https://kimh.github.io/clojure-by-example[Clojure By Example]
 * https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
 * http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
