add spec cross links

--- a/content/about/spec.adoc
+++ b/content/about/spec.adoc
@@ -379,3 +379,8 @@ contract systems, such as https://docs.racket-lang.org/guide/contracts.html[Rack
 *I hope you find spec useful and powerful.*
 
 Rich Hickey
+
+== More information
+
+* <<xref/../../../guides/spec#,Spec guide>>
+* https://clojure.github.io/spec.alpha[API Docs]
