Update Link and new Logo

--- a/content/events/2020/clojurebridge.adoc
+++ b/content/events/2020/clojurebridge.adoc
@@ -3,7 +3,7 @@ London Clojurians
 2020-02-21
 :jbake-type: event
 :jbake-edition: 2020
-:jbake-link: https://www.meetup.com/London-Clojurians/events/267374743
+:jbake-link: https://www.bridgetroll.org/events/500
 :jbake-location: London, United Kingdom
 :jbake-start: 2020-02-21
 :jbake-end: 2020-02-22
@@ -35,4 +35,4 @@ London Clojurians
 
 https://twitter.com/ldnclj[Twitter]
 
-image::https://raw.githubusercontent.com/jr0cket/london-clojurians-logo/master/london-clojurians-logo.png[London Clojurians logo]
+image::https://raw.githubusercontent.com/ClojureBridgeLondon/clojurebridge-logo-modern/master/clojurebridge-logo-modern-london.png[ClojureBridge Logo]
