code example was incorrect wrong number of bracket

--- a/content/guides/learn/answers.adoc
+++ b/content/guides/learn/answers.adoc
@@ -78,8 +78,8 @@ nil
 [source,clojure]
 ----
 (defn greeting
-  ([] (greeting "Hello" "World")
-  ([x] (greeting "Hello" x)
+  ([] (greeting "Hello" "World"))
+  ([x] (greeting "Hello" x))
   ([x y] (str x ", " y "!")))
 ----
 +
