add faq for def-

--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -143,12 +143,19 @@ Design benefits of sequences:
 
 - Consumer control - returning a seq from an API lets you combine input + transformation into something that gives the consumer control. Transducers don't work as well for this (but will work better for cases where input and transformation are separated).
 
+== Core functions
+
+[[def_minus]]
+**<<faq#def_minus,Why `defn-` but no `def-`?>>**
+
+At one point, metadata was more cumbersome to use than now (the syntax for a private defn was `#^{:private true}`), and `defn-` seemed worth creating as an "easy" version. The metadata support improved and became "stackable" which allowed easier composition of independent metadata. Rather than create private variants of all the def forms, it is simply preferred to use `^:private` metadata when needed on `def` or other def forms..
+
 == Spec
 
 [[spec_alpha]]
 **<<faq#spec_alpha,Why is spec alpha?>>**
 
-spec is in alpha to indicate that the API may still change. spec was broken out of Clojure core so that spec can be updated independently from the main Clojure version. At some point spec's API will be considered stable and at that point the alpha will be removed.
+spec is in alpha to indicate that the API may still change. spec was broken out of Clojure core so that spec can be updated independently from the main Clojure version. At some point spec's API will be considered stable and at that point the alpha will be removed. The next version of spec is being developed at https://github.com/clojure/alpha.spec[alpha.spec].
 
 [[spec_location]]
 **<<faq#spec_location,Where should I put my specs?>>**
