--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -46,9 +46,7 @@ To install with the Linux script installer:
 
 [source,shell]
 ----
-curl -O https://download.clojure.org/install/linux-install-1.10.1.502.sh
-chmod +x linux-install-1.10.1.502.sh
-sudo ./linux-install-1.10.1.502.sh
+curl -s "https://download.clojure.org/install/linux-install-1.10.1.502.sh" | sudo bash
 ----
 
 === Installation on Windows
