Added DFW Southlake clojure mid-cities meetup

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -59,6 +59,7 @@ Group] - Reston, VA
 *** https://groups.google.com/group/clj-houston[Clojure Houston User Group]
 *** Dallas/Fort Worth Clojure Interest Group (https://groups.google.com/forum/#topic/clojure/Cym7oiViFoQ[
 See mailing list thread for more info])
+*** https://www.meetup.com/Clojure-Mid-Cities/[DFW-Southlake Clojure Mid-Cities Meetup]
 *** https://www.meetup.com/Austin-Clojure-Meetup/[Austin Clojure Meetup]
 *** Greenville Clojure Users Group (and https://groups.google.com/forum/#!forum/greenville-clojure[mailing list])
 *** https://www.meetup.com/Clojure-Co-Lab/[Clojure Co-Lab] - Columbia, South
