clarify Java support versions

--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -12,7 +12,14 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * See: <<xref/../../guides/getting_started#,Getting Started>>
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.10.1/[Clojure 1.10.1]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
-* Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
+
+=== Java
+
+Clojure depends on Java and all Clojure code is compiled to Java 8 compatible bytecode. At runtime, Clojure depends on the JVM (Java Virtual Machine):
+
+* Minimum: Java 8
+* Supported: LTS (long term support) releases, currently Java 8 and Java 11
+* Others: may work, not officially supported
 
 == Older Releases
 
