--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -12,6 +12,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://1st1.dev/[1st1.dev,opts=nofollow]
 * http://8thlight.com/[8th Light,opts=nofollow]
 * http://www.aclaimant.com/[aclaimant,opts=nofollow]
+* https://www.active-group.de/[Active Group GmbH,opts=nofollow]
 * http://www.adaptly.com/[Adaptly,opts=nofollow]
 * http://www.adgoji.com/[AdGoji,opts=nofollow]
 * https://www.adobe.com[Adobe,opts=nofollow]
