--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -21,6 +21,13 @@ Clojure depends on Java and all Clojure code is compiled to Java 8 compatible by
 * Supported: LTS (long term support) releases, currently Java 8 and Java 11
 * Others: likely work, but not officially supported
 
+== Development Release: 1.10.2-alpha1 (March 5, 2020)
+
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.2-alpha1/[Clojure 1.10.2-alpha1]
+* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.2*[Clojure 1.10.2 pre-release builds]
+* <<devchangelog#,Dev changelog>>
+* Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
+
 == Older Releases
 
 * For older releases, see <<downloads_older#,Older Releases>>
